--- a/client/src/components/DesignSystem/Chat/AdminChat/style_module.scss
+++ b/client/src/components/DesignSystem/Chat/AdminChat/style_module.scss
@@ -1,31 +1,34 @@
 /*--------------------
 Mixins
 --------------------*/
-@mixin center {
-    position: fixed;
-    bottom: 5px;
-    right: 15px;
-    // transform: translate(-50%, -50%);
-}
+// @mixin center {
+//     position: fixed;
+//     bottom: 5px;
+//     right: 15px;
+//     // transform: translate(-50%, -50%);
+// }
 
 @mixin ball {
-    @include center;
-    content: '';
+    // @include center;
+    // content: '';
     display: block;
-    width: 3px;
-    height: 3px;
+    width: 3.2px;
+    height: 3.2px;
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.5);
     z-index: 2;
-    margin-top: 4px;
+    // margin-top: 4px;
+    margin: 0 3px;
     animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
 }
 
 /*--------------------
 Chat
 --------------------*/
-.chat {
-    @include center;
+.adminChat {
+    position: fixed;
+    bottom: 5px;
+    right: 320px;
     width: 300px;
     height: 80vh;
     max-height: 500px;
@@ -108,9 +111,15 @@ Messages
         position: absolute;
         top: 0;
         left: 0;
-        height: 101%;
+        height: 100%;
         width: 100%;
         padding: 0 10px;
+        .outText {
+            font-size: 12px;
+            position: absolute;
+            bottom: 10px;
+            left: calc(50% - 48px);
+        }
     }
 
     .message {
@@ -192,27 +201,28 @@ Messages
         }
 
         &.loading {
-            &::before {
-                @include ball;
-                border: none;
-                animation-delay: 0.15s;
-            }
-
-            & span {
-                display: block;
+            & .chat-loading {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
                 font-size: 0;
-                width: 20px;
                 height: 10px;
-                position: relative;
-
-                &::before {
+                margin-top: 3px;
+                span:nth-child(1) {
                     @include ball;
-                    margin-left: -7px;
+                    border: none;
+                    animation-delay: 0.15s;
                 }
 
-                &::after {
+                span:nth-child(2) {
                     @include ball;
-                    margin-left: 7px;
+                    border: none;
+                    animation-delay: 0.2s;
+                }
+
+                span:nth-child(3) {
+                    @include ball;
+                    border: none;
                     animation-delay: 0.3s;
                 }
             }
@@ -325,6 +335,6 @@ Bounce
         transform: translateY(0) scaleY(0.8);
     }
     to {
-        transform: translateY(-10px);
+        transform: translateY(-5px);
     }
 }
