--- a/client/src/components/DesignSystem/NavTop/style_module.scss
+++ b/client/src/components/DesignSystem/NavTop/style_module.scss
@@ -41,6 +41,7 @@
                 border-radius: 50%;
                 overflow: hidden;
                 border: 1px solid #fff;
+                background: linear-gradient(90deg, #0073e6, #0ca);
                 img {
                     width: 100%;
                 }
