--- a/client/src/components/pages/Home/style_module.scss
+++ b/client/src/components/pages/Home/style_module.scss
@@ -82,6 +82,19 @@ main {
         }
     }
 
+    .adminChatroom_body {
+        width: 100%;
+        /* margin: 0 auto; */
+        padding: 0 10px;
+        height: auto;
+        display: flex;
+        // justify-content: flex-end;
+        flex-direction: row-reverse;
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        z-index: 999;
+    }
     .rating_body {
         width: 90%;
         margin: 0 auto;
