--- a/client/src/components/DesignSystem/Socket/ChatRoom/style_module.scss
+++ b/client/src/components/DesignSystem/Socket/ChatRoom/style_module.scss
@@ -26,12 +26,12 @@ Mixins
 Chat
 --------------------*/
 .chat {
-    @include center;
     width: 300px;
     height: 80vh;
     max-height: 500px;
     z-index: 2;
     overflow: hidden;
+    margin: 0 5px;
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
     // background: rgba(0, 0, 0, 0.5);
     background: #000e1bc4;
