--- a/client/src/components/DesignSystem/Socket/ChatRoomAdmin/style_module.scss
+++ b/client/src/components/DesignSystem/Socket/ChatRoomAdmin/style_module.scss
@@ -25,21 +25,21 @@ Mixins
 /*--------------------
 Chat
 --------------------*/
-.chat {
-    @include center;
-    width: 300px;
-    height: 80vh;
-    max-height: 500px;
-    z-index: 2;
-    overflow: hidden;
-    box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
-    // background: rgba(0, 0, 0, 0.5);
-    background: #000e1bc4;
-    border-radius: 10px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-}
+// .chat {
+//     @include center;
+//     width: 300px;
+//     height: 80vh;
+//     max-height: 500px;
+//     z-index: 2;
+//     overflow: hidden;
+//     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
+//     // background: rgba(0, 0, 0, 0.5);
+//     background: #000e1bc4;
+//     border-radius: 10px;
+//     display: flex;
+//     justify-content: space-between;
+//     flex-direction: column;
+// }
 
 .chatRoomAdmin {
     width: 300px;
