--- a/client/src/components/DesignSystem/Socket/ChatRoom/style_module.scss
+++ b/client/src/components/DesignSystem/Socket/ChatRoom/style_module.scss
@@ -226,6 +226,64 @@ Messages
             }
         }
     }
+
+    // ----- users -----
+    .create_users {
+        width: 100%;
+        // text-align: center;
+        margin-top: 30px;
+        .users_avatar {
+            width: 100px;
+            height: 100px;
+            overflow: hidden;
+            margin: 0 auto;
+            border-radius: 50%;
+            background: linear-gradient(90deg, #0073e6, rgb(255, 219, 15));
+            img {
+                width: 100%;
+                height: auto;
+                border-radius: 50%;
+                transform: scale(1.22);
+            }
+        }
+        .users_inner {
+            padding: 0 20px;
+            margin-top: 30px;
+            .users_ni {
+                margin-top: 20px;
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                h3 {
+                    width: 60px;
+                    font-size: 14px;
+                    color: #fff;
+                }
+                & > span {
+                    width: 80%;
+                }
+            }
+            .users_button {
+                margin-top: 30px;
+                text-align: right;
+                button {
+                    width: 100px;
+                    height: 30px;
+                    background: transparent;
+                    border: 1px solid #fff;
+                    border-radius: 3px;
+                    color: #fff;
+                    font-size: 14px;
+                    cursor: pointer;
+                    transition: 0.3s;
+                    &:hover {
+                        border: 1px solid #0ca;
+                        color: #0ca;
+                    }
+                }
+            }
+        }
+    }
 }
 
 /*--------------------
