--- a/client/src/components/pages/Animate/style_module.scss
+++ b/client/src/components/pages/Animate/style_module.scss
@@ -32,11 +32,15 @@ main {
         border: 1px solid #fff;
         border-radius: 5px;
         transition: 0.3s;
-        margin-right: 20px;
+        margin-right: 15px;
         margin-bottom: 20px;
         cursor: pointer;
         &:hover {
             background: #00274e;
         }
     }
+}
+
+.tagHover {
+    background: #00274e;
 }
