--- a/client/src/components/pages/penDetail/style_module.scss
+++ b/client/src/components/pages/penDetail/style_module.scss
@@ -12,60 +12,60 @@ main {
     background-size: cover;
     color: #fff;
 
-    .rating_title_inner {
-        width: 90%;
-        margin: 0 auto;
+    // .rating_title_inner {
+    //     width: 90%;
+    //     margin: 0 auto;
 
-        .rating_title {
-            display: flex;
-            align-items: center;
-            margin-bottom: 10px;
+    //     .rating_title {
+    //         display: flex;
+    //         align-items: center;
+    //         margin-bottom: 10px;
 
-            h2 {
-                font-size: 28px;
-                font-weight: 600;
-                height: 40px;
+    //         h2 {
+    //             font-size: 28px;
+    //             font-weight: 600;
+    //             height: 40px;
 
-                span {
-                    font-size: 28px;
-                    font-weight: 600;
-                    color: #0ca;
-                }
-            }
-        }
+    //             span {
+    //                 font-size: 28px;
+    //                 font-weight: 600;
+    //                 color: #0ca;
+    //             }
+    //         }
+    //     }
 
-        .rating_time {
-            font-size: 14px;
-            .rating_data {
-                display: flex;
-                align-items: center;
-                span {
-                    display: inline-block;
-                    margin-right: 10px;
-                }
-                // .rating_loading {
-                //     width: 130px;
-                //     height: 20px;
-                //     border-radius: 10px;
-                //     opacity: 0.6;
-                //     background: linear-gradient(90deg, #0073e6, #0ca);
-                //     background-size: 200% 200%;
-                //     -webkit-animation: gradient 3.5s linear infinite;
-                //     -moz-animation: gradient 3.5s linear infinite;
-                //     animation: gradient 3.5s ease infinite;
-                // }
-                // .rating_t1 {
-                //     width: 140px;
-                // }
-                // .rating_t2 {
-                //     width: 94px;
-                // }
-                // .rating_t3 {
-                //     width: 150px;
-                // }
-            }
-        }
-    }
+    //     .rating_time {
+    //         font-size: 14px;
+    //         .rating_data {
+    //             display: flex;
+    //             align-items: center;
+    //             span {
+    //                 display: inline-block;
+    //                 margin-right: 10px;
+    //             }
+    //             // .rating_loading {
+    //             //     width: 130px;
+    //             //     height: 20px;
+    //             //     border-radius: 10px;
+    //             //     opacity: 0.6;
+    //             //     background: linear-gradient(90deg, #0073e6, #0ca);
+    //             //     background-size: 200% 200%;
+    //             //     -webkit-animation: gradient 3.5s linear infinite;
+    //             //     -moz-animation: gradient 3.5s linear infinite;
+    //             //     animation: gradient 3.5s ease infinite;
+    //             // }
+    //             // .rating_t1 {
+    //             //     width: 140px;
+    //             // }
+    //             // .rating_t2 {
+    //             //     width: 94px;
+    //             // }
+    //             // .rating_t3 {
+    //             //     width: 150px;
+    //             // }
+    //         }
+    //     }
+    // }
 
     .rating_body {
         width: 90%;
