--- a/client/src/components/pages/Animate/OpenYoutube/style.module.scss
+++ b/client/src/components/pages/Animate/OpenYoutube/style.module.scss
@@ -3,8 +3,18 @@
     margin: 0 auto;
     display: flex;
     .lsit {
-        width: 100%;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        border: 1px solid #0ca;
         margin: 0 10px;
+
+        overflow: hidden;
+        text-align: center;
+
+        img {
+            height: 100%;
+        }
     }
 }
 
@@ -18,10 +28,10 @@
     .icon {
         width: 30px;
         height: 30px;
-        background-color: red;
+        // background-color: red;
         position: absolute;
-        top: 0;
-        right: 0;
+        top: 10px;
+        right: 10px;
     }
     .inner {
         width: 100%;
