--- a/client/src/components/DesignSystem/NavTop/style_module.scss
+++ b/client/src/components/DesignSystem/NavTop/style_module.scss
@@ -24,6 +24,7 @@
 
             .btn_right {
                 margin-left: 10px;
+                cursor: pointer;
             }
 
             .nav_btn {
