[client&&server]backend completed

--- a/client/src/components/pages/Admin/Backend/EditItems/style.module.scss
+++ b/client/src/components/pages/Admin/Backend/EditItems/style.module.scss
@@ -171,6 +171,7 @@
                             background: rgba(29, 56, 83, 0.5);
                             border-radius: 5px;
                             resize: vertical;
+                            font-size: 14px;
                         }
                         .switch {
                             display: flex;
