Fixed - [adminList] upgrade

--- a/client/src/components/DesignSystem/AdminList/style.module.scss
+++ b/client/src/components/DesignSystem/AdminList/style.module.scss
@@ -67,8 +67,11 @@
                     -moz-transition: 1s;
                     transition: 1s;
                 }
-                .admin_state {
+                .admin_signin {
                     background-color: #0ca;
+                }
+                .admin_signout {
+                    background: gray;
                 }
             }
 
